--- a/package.yaml
+++ b/package.yaml
@@ -6,10 +6,6 @@ author:              "Markus Mügge"
 maintainer:          "markus.muegge@tu-dortmund.de"
 copyright:           "2019 Markus Mügge"
 
-extra-source-files:
-- README.md
-- ChangeLog.md
-
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
 # category:            Web
@@ -21,6 +17,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- random
 
 library:
   source-dirs: src
