--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - random
+- parallel
 
 library:
   source-dirs: src
